--- a/index.qmd
+++ b/index.qmd
@@ -107,10 +107,10 @@ completed the readings.
 | 3    | Jan-30 | Python: Introduction                | GDA 1  GDS 2      | Quiz 1     |
 |      | Feb-01 | Python: Programming Concepts        | GDA 2             |            |
 | 4    | Feb-06 | Python: Scripting                   | GDA 2             | Quiz 2     |
-|      | Feb-08 | Python: Functions                   | GDA 2             | Exercise 1 |
-| 5    | Feb-13 | Python: Data Analysis/Visualization | GDA 3,4           | Quiz 3     |
-|      | Feb-15 | Python: Geographic Data             | GDA 5             |            |
-| 6    | Feb-20 | Geopandas                           | GDA 6             | Quiz 4     |
+|      | Feb-08 | Python: Functions                   | GDA 2             |            |
+| 5    | Feb-13 | Exericse 1 Collaboration            |                   | Exercise 1 |
+|      | Feb-15 | Python: Data Analysis/Visualization | GDA 3,4           |            |
+| 6    | Feb-20 | Geopandas                           | GDA 5             | Quiz 4     |
 |      | Feb-22 | Geoprocessing                       | GDA 6             |            |
 | 7    | Feb-27 | GeoSNAP                             |                   | Quiz 5     |
 |      | Feb-29 | PySAL                               | GDS 3             |            |
